Search works, need to add recursive search

--- a/code/python/kivyStuff/main.kv
+++ b/code/python/kivyStuff/main.kv
@@ -111,6 +111,10 @@ ScreenManagement:
             size_hint: .16, .16
             text: root.values(True)
 
+        # CheckBox:
+        #     pos_hint: {"x": 0.95, "y": 0.5}
+        #     size_hint: .05, .05
+
 
 <LoginScreen>:
     name: "Login"
