Fixed a few bugs
- Telling if the file had changed size once closed didn't work, and then I realised it should re-save it anyway, as the file can be the same size if a byte is just replaced.

--- a/code/python-go/kivyStuff/main.kv
+++ b/code/python-go/kivyStuff/main.kv
@@ -66,13 +66,13 @@ ScreenManagement:
             text: "No!!!"
             pos_hint: {"center_x": .25, "center_y": .25}
             size_hint: .4, .3
-            on_release: root.dismiss()
+            on_release: root.fileScreen.outerScreen.dismiss()
 
         Button:
             text: "Yes"
             pos_hint: {"center_x": .75, "center_y": .25}
             size_hint: .4, .3
-            on_release: root.dismiss();root.checkCanEncrypt(root.inputText)
+            on_release: root.dismiss();root.fileScreen.outerScreen.checkCanEncrypt(root.inputText)
 
 <LoginScreen>:
     keyInput: keyInput
