SHA only once instead of every encrypt/decrypt

--- a/code/python-go/kivyStuff/main.kv
+++ b/code/python-go/kivyStuff/main.kv
@@ -313,10 +313,16 @@ ScreenManagement:
 
         Label:
         Label:
+
         Label:
         Label:
+
         Label:
         Label:
+
+        Label:
+        Label:
+
         Label:
         Label:
 
