--- a/code/python-go/kivyStuff/main.kv
+++ b/code/python-go/kivyStuff/main.kv
@@ -197,7 +197,7 @@ ScreenManagement:
             hint_text: "Search"
             pos_hint: {"x": 0.16, "top": 1}
             multiline: False
-            on_text_validate: root.searchForItem(root.quickSortAlph(root.currentDecList), self.text)
+            on_text_validate: root.searchForItem(root.currentDecList, self.text)
 
 
         # Button:
