Added config file option for recursive search.

--- a/code/python-go/kivyStuff/main.kv
+++ b/code/python-go/kivyStuff/main.kv
@@ -363,6 +363,7 @@ ScreenManagement:
 <SettingsPop@Popup>:
     auto_dismiss: False
     newLoc: newLoc
+    recurseSearch: recurseSearch
     GridLayout:
         cols: 2
         Label:
