Bluetooth kind of working
Still need to fix:
- When the BT server is supposed to start at login

--- a/code/python-go/widgets.kv
+++ b/code/python-go/widgets.kv
@@ -111,55 +111,6 @@
         #on_release: app.root.current = root.checkKey(keyInput.text)
         on_release: app.root.current = root.checkKey(keyInput.text)
 
-    ####BT attempt####
-    # #keyInput: keyInput
-    # manager: root.parent
-    # Label:
-    #     id: labelLogin
-    #     size_hint: .46, .08
-    #     text: root.getWelcomeText()
-    #     font_size: 22
-    #     pos_hint: {"center_x": 0.5, "y": 0.8}
-    #
-    # # Button:
-    # #     id: loginButton
-    # #     size_hint: .16, .16
-    # #     pos_hint: {"center_x": .5, "center_y": .5}
-    # #     on_release: app.root.current = "main";runServOut = [];root.unlock = False
-    # #     text: "bypass"
-    #
-    # # Button:
-    # #     id: checkbutton
-    # #     size_hint: .16, .16
-    # #     pos_hint: {"center_x": .5, "center_y": .34}
-    # #     text: "Check Code Sent"
-    # #     on_release: app.root.current = root.keyValidated()
-    #
-    # Label:
-    #     id: labelLogin
-    #     size_hint: .46, .08
-    #     text: root.needToSetKey()
-    #     font_size: 22
-    #     pos_hint: {"center_x": 0.5, "y": 0.8}
-    #
-    # TextInput:
-    #     id: keyInput
-    #     size_hint: .7, .08
-    #     font_size: 22
-    #     hint_text: "Key (16 characters maximum)"
-    #     pos_hint: {"center_x": 0.5, "center_y": 0.6}
-    #     password: True
-    #     multiline: False
-    #     on_text_validate: app.root.current = root.checkKey(keyInput.text)
-    #
-    # Button:
-    #     id: submitKey
-    #     size_hint: .16, .16
-    #     font_size: 22
-    #     text: "Submit"
-    #     pos_hint: {"center_x": 0.5, "center_y": 0.4}
-    #     #on_release: app.root.current = root.checkKey(keyInput.text)
-    #     on_release: root.checkKey(keyInput.text)
 
 <LoginScreenBT>:
 
@@ -178,19 +129,27 @@
         font_size: 22
         pos_hint: {"center_x": 0.5, "y": 0.8}
 
-    Button:
-        id: loginButton
-        size_hint: .16, .16
-        pos_hint: {"center_x": .5, "center_y": .5}
-        on_release: app.root.current = "main";root.lockList = [];root.unlock = False
-        text: "bypass"
+#    Button:
+#        id: starter
+#        size_hint: .16, .16
+#        pos_hint: {"center_x": .5, "center_y": .5}
+#        font_size: 14
+#        text: "Start Bluetooth Server"
+#        on_release: root.startSrv()
 
-    Button:
-        id: checkbutton
-        size_hint: .16, .16
-        pos_hint: {"center_x": .5, "center_y": .34}
-        on_release: root.unlock = root.checkValid()
-        text: "Check Code Sent"
+#    Button:
+#        id: loginButton
+#        size_hint: .16, .16
+#        pos_hint: {"center_x": .5, "center_y": .5}
+#        on_release: app.root.current = "main";root.lockList = [];root.unlock = False
+#        text: "bypass"
+#
+#    Button:
+#        id: checkbutton
+#        size_hint: .16, .16
+#        pos_hint: {"center_x": .5, "center_y": .34}
+#        on_release: root.unlock = root.checkValid()
+#        text: "Check Code Sent"
 
 <MainScreen>:
     addFile: addFile
