Bluetooth and other changes:
- Made main program close when it lost connection to the mobile (not only when the app is closed).
- Removed the bluetooth status thread on MainScreen, as I could just do all of that when the bluetooth thread closes.
- Mobile app hashes key before sending it so it can't be intercepted.
- On the app you can retry connecting instead of having to restart the app.
- SHA accepts list instead of string now (should have changed that ages ago).
- checkKey in main program LoginScreen updated to split input into an int list.
- Made the home button actually go home.

--- a/code/python-go/widgets.kv
+++ b/code/python-go/widgets.kv
@@ -187,12 +187,12 @@
         #     on_release: root.changeSortOrder()
 
         Button:
-            id: goBackArrow
+            id: home
             size_hint: .06, .08
             pos_hint: {"x": .62, "y": 0.84}
-            on_release: root.resetButtons()
+            on_release: root.goHome()
             Image:
-                source: root.getPathForButton("backArrows.png")
+                source: root.getPathForButton("home.png")
                 x: self.parent.x + 5
                 y: self.parent.y
                 size: 50, 50
