--- a/code/mobile/KivyPad/pad.kv
+++ b/code/mobile/KivyPad/pad.kv
@@ -24,8 +24,7 @@ ScreenManagement:
 
 <DeviceButton@Button>:
     font_size: 80
-    on_release: self.devicePop.setupBT(self.text);self.devicePop.dismiss()
-
+    on_release: self.devicePop.setupBT(self.text)
 
 <PadScreen>:
     display: display
@@ -34,60 +33,47 @@ ScreenManagement:
             size_hint_y: .7
             cols: 3
             Button:
-                font_size: 30
                 text: "7"
                 on_release: root.addNum(self.text)
             Button:
-                font_size: 30
                 text: "8"
                 on_release: root.addNum(self.text)
             Button:
-                font_size: 30
                 text: "9"
                 on_release: root.addNum(self.text)
 
             Button:
-                font_size: 30
                 text: "4"
                 on_release: root.addNum(self.text)
             Button:
-                font_size: 30
                 text: "5"
                 on_release: root.addNum(self.text)
             Button:
-                font_size: 30
                 text: "6"
                 on_release: root.addNum(self.text)
 
             Button:
-                font_size: 30
                 text: "1"
                 on_release: root.addNum(self.text)
             Button:
-                font_size: 30
                 text: "2"
                 on_release: root.addNum(self.text)
             Button:
-                font_size: 30
                 text: "3"
                 on_release: root.addNum(self.text)
 
 
             Button:
-                font_size: 30
                 text: "DEL"
                 on_release: root.backSpace()
             Button:
-                font_size: 30
                 text: "0"
                 on_release: root.addNum(self.text)
             Button:
-                font_size: 30
                 text: "Submit"
                 on_release: root.confirm()
 
         Label:
             id: display
             text: root.numsString
-            font_size: 40
             pos_hint: {"center_x": .5, "y": .35}
