--- a/code/python-go/widgets.kv
+++ b/code/python-go/widgets.kv
@@ -214,7 +214,7 @@
             id: LogOut
             size_hint: .16, .16
             pos_hint: {"x": 0, "top": 1}
-            on_release: root.clearUpTempFiles();app.root.current = "Login"
+            on_release: root.lock()#root.clearUpTempFiles();app.root.current = "Login"
             Image:
                 source: root.getPathForButton("padlock.png")
                 x: self.parent.x - 20
