--- a/code/python-go/widgets.kv
+++ b/code/python-go/widgets.kv
@@ -1,4 +1,5 @@
 #: import Window kivy.core.window.Window
+#: import Clock kivy.clock
 <listButton@Button>:
     font_size: 14
     size_hint: 1, None
@@ -40,13 +41,13 @@
             text: "No!!!"
             pos_hint: {"center_x": .25, "center_y": .25}
             size_hint: .4, .3
-            on_release: root.fileScreen.outerScreen.dismiss()
+            on_release: Clock.Clock.schedule_once(root.dismiss, -1)
 
         Button:
             text: "Yes"
             pos_hint: {"center_x": .75, "center_y": .25}
             size_hint: .4, .3
-            on_release: root.dismiss();root.fileScreen.outerScreen.checkCanEncrypt(root.inputText)
+            on_release: Clock.Clock.schedule_once(root.dismiss, -1);root.fileScreen.outerScreen.checkCanEncrypt(root.inputText)
 
 
 <LoginScreen>:
@@ -105,27 +106,6 @@
         font_size: 22
         pos_hint: {"center_x": 0.5, "y": 0.8}
 
-#    Button:
-#        id: starter
-#        size_hint: .16, .16
-#        pos_hint: {"center_x": .5, "center_y": .5}
-#        font_size: 14
-#        text: "Start Bluetooth Server"
-#        on_release: root.startSrv()
-
-#    Button:
-#        id: loginButton
-#        size_hint: .16, .16
-#        pos_hint: {"center_x": .5, "center_y": .5}
-#        on_release: app.root.current = "main";root.lockList = [];root.unlock = False
-#        text: "bypass"
-#
-#    Button:
-#        id: checkbutton
-#        size_hint: .16, .16
-#        pos_hint: {"center_x": .5, "center_y": .34}
-#        on_release: root.unlock = root.checkValid()
-#        text: "Check Code Sent"
 
 <MainScreen>:
     addFile: addFile
