Fixed BT server, so it only has to run once. Vnice
Before I was shutting down the server when the login was done, as it caused a segmentation fault. I found out today that you can just use the screen manager to get each screen, so i executed the BT server in MainScreen from the LoginScreenBT. This means that when the screen switches, the thread is running in MainScreen, but is being used for login.

--- a/code/mobile/KivyPad/pad.kv
+++ b/code/mobile/KivyPad/pad.kv
@@ -9,14 +9,11 @@ ScreenManagement:
         name: "Pad"
         id: Pad
         manager: screenmanager
-    # DeviceSelectionScreen:
-    #     name: "Select"
-    #     id: Select
-    #     manager: screenmanager
-    # ConfirmationScreen:
-    #     name: "Confirm"
-    #     id: Confirm
-    #     manager: screenmanager
+    MainScreen:
+        name: "Main"
+        id: Main
+        manager: screenmanager
+
 
 <PadNum@Button>:
     font_size: 30
@@ -77,3 +74,8 @@ ScreenManagement:
             id: display
             text: root.numsString
             pos_hint: {"center_x": .5, "y": .35}
+
+<MainScreen>:
+    FloatLayout:
+        Label:
+            text: "Hi"
