--- a/code/python-go/widgets.kv
+++ b/code/python-go/widgets.kv
@@ -124,6 +124,10 @@
         font_size: 22
         pos_hint: {"center_x": 0.5, "y": 0.8}
 
+    Label:
+        id: clientLabel
+        pos_hint: {"center_x": 0.5, "center_y": 0.5}
+
 
 <MainScreen>:
     addFile: addFile
