--- a/code/mobile/KivyPad/pad.kv
+++ b/code/mobile/KivyPad/pad.kv
@@ -1,6 +1,7 @@
 # File name: kiv.py
 #: import FadeTransition kivy.uix.screenmanager.FadeTransition
 #: import Window kivy.core.window.Window
+#: import Clock kivy.clock.Clock
 
 ScreenManagement:
     id: screenmanager
@@ -14,6 +15,8 @@ ScreenManagement:
         id: Main
         manager: screenmanager
 
+<recievePopup@Popup>:
+    title: "Ready to recieve."
 
 <PadNum@Button>:
     font_size: 30
@@ -78,4 +81,10 @@ ScreenManagement:
 <MainScreen>:
     FloatLayout:
         Label:
-            text: "Hi"
+            text: "To lock the Vault, close the program."
+
+        Button:
+            pos_hint: {"x": .25, "y": .2}
+            size_hint: 0.5, 0.2
+            text: "Recieve files from PC"
+            on_release: Clock.schedule_once(root.recvPop.open, -1)
